# oz-fastapi-be-12-team-2

./: .env.example  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  gitmessage.txt  main.py  pyproject.toml  test.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: build.yml  checks.yml  deploy.yml
app/: main.py
app/ai/: api.py  prompts.py  router.py  schema.py  service.py  test_gemini.py
app/diary/: api.py  model.py  repository.py  schema.py  service.py  test_diary.py
app/files/: api.py  schema.py  service.py
app/notification/: api.py  model.py  push_test.py  repository.py  schema.py  seed.py  service.py  test_notification.py
app/shared/: email_test.py  model.py  models.py
app/tag/: api.py  model.py  repository.py  router.py  schema.py  service.py
app/user/: api.py  auth.py  conftest.py  model.py  routes.py  schema.py  service.py  test_user.py  utils.py
core/: config.py  exceptions.py
migrations/models/: 0_20250827102811_init.py  0_20250901084658_init.py  0_20250901183123_init.py  0_20250902024609_init.py  1_20250827095355_update.py  1_20250828014121_update.py  1_20250829020920_update.py  5_20250828074328_None.py
scripts/: run.sh
tools/: diary-tester.html
